<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".third_question">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/thirdQuestText"
            android:textSize="22sp"/>
    </LinearLayout>
    <RadioGroup
        android:id="@+id/thirdRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/thirdRadioBut1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wrongAnswerThirdQuest"
            android:textSize="22sp"
            android:onClick="onClickResult">
        </RadioButton>
        <RadioButton
            android:id="@+id/thirdRadioBut2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wrongAnswer2ThirdQuest"
            android:textSize="22sp"
            android:onClick="onClickResult">
        </RadioButton>
        <RadioButton
            android:id="@+id/thirdRadioBut3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rightAnswerThirdQuest"
            android:textSize="22sp"
            android:onClick="onClickResult">
        </RadioButton>
    </RadioGroup>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/thirdForwardButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/forward"
            android:onClick="forwardClickResult">
        </Button>
        <Button
            android:id="@+id/thirdBackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:onClick="thirdBackButton">
        </Button>
    </LinearLayout>

</LinearLayout>