<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".second_question">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/secondQuestText"
            android:textSize="22sp"/>
    </LinearLayout>
    <RadioGroup
        android:id="@+id/secondRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/secondRadioBut1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wrongAnswerSecondQuest"
            android:textSize="22sp"
            android:onClick="onClickThird">
        </RadioButton>
        <RadioButton
            android:id="@+id/secondRadioBut2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rightAnswerSecondQuest"
            android:textSize="22sp"
            android:onClick="onClickThird">
        </RadioButton>
        <RadioButton
            android:id="@+id/secondRadioBut3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wrongAnswer2SecondQuest"
            android:textSize="22sp"
            android:onClick="onClickThird">
        </RadioButton>
    </RadioGroup>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/secondForwardButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/forward"
            android:onClick="forwardClickThird">
        </Button>
        <Button
            android:id="@+id/secondBackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:onClick="secondBackButton">
        </Button>
    </LinearLayout>

</LinearLayout>